# HeatingRod

./: CMakeLists.txt  HeatingRod.cpp  HeatingRod.h
test/: CMakeLists.txt  heatingrod_test.cpp
